# parallel_programming

./: .gitignore
CUDA/: README.md  experiment01.md  experiment02.md  experiment03.md
cuda_study/mps/: CMakeLists.txt  benchmark.cc  case1.cu  case2.cu  case3.cu  case4.cu  datum.cc  helper_cuda.h  kernels.h  mpi_benchmark.cc
cuda_study/tokenizer/: CMakeLists.txt  benchmark.cc  cuda_jump1.cu  cuda_jump2.cu  cuda_jump_1.cu  cuda_jump_2.cu  cuda_jump_3.cu  cuda_jump_4.cu  cuda_jump_5.cu  datum.cc  helper_cuda.h  jump.cc  naive.cc  openmp_jump.cc
parallel_tokenizer/: CMakeLists.txt  avx.cc  benchmark.cc  bmh.cc  build.cc  cuda_jump.cu  cuda_segmented_naive.cu  jump.cc  naive.cc  openacc_jump.cc  openmp_naive.cc  openmp_segmented_naive.cc  openmp_sse.cc  sse.cc  thrust.cu
tokenizer/: Makefile  avx.cc  benchmark.cc  benchmark.h  bmh.cc  cuda_naive.cu  jump.cc  naive.cc  openacc_naive.cc  openmp_avx.cc  openmp_jump.cc  openmp_paralleled_sse.cc  openmp_segmented_avx.cc  openmp_segmented_bmh.cc  openmp_segmented_sse.cc  parallel_bytes_avx.cc  parallel_bytes_jump.cc  parallel_bytes_jump_cuda.cu  parallel_bytes_naive.cc  parallel_bytes_naive_cuda.cu  parallel_bytes_sse.cc  parallel_segments_avx.cc  parallel_segments_bmh.cc  parallel_segments_naive.cc  parallel_segments_sse.cc  parallel_sse.cc  sse.cc
